--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "livewire/livewire": "^2.12",
         "mcamara/laravel-localization": "^1.8",
         "pusher/pusher-php-server": "^7.2",
-        "symfony/intl": "^6.2"
+        "symfony/intl": "^6.2",
+        "twilio/sdk": "^7.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
