--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
         "mcamara/laravel-localization": "^1.8",
+        "opcodesio/log-viewer": "^2.5",
         "pusher/pusher-php-server": "^7.2",
         "symfony/intl": "^6.2",
         "twilio/sdk": "^7.5"
