--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.5",
+        "intervention/image": "^2.7",
         "laravel/fortify": "^1.16",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
