--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "twilio/sdk": "^7.5"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.19",
         "laravel/sail": "^1.0.1",
